add target blank to links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <!-- CARDS -->
       <div class="row">
-        <a class="col-xs-4" href="https://console.firebase.google.com/">
+        <a class="col-xs-4" href="https://console.firebase.google.com/" target="_blank">
           <div class="card p-a-1 text-xs-center">
             <div class="col-xs-12 p-a-0 card-logo">
               <img src="https://www.gstatic.com/mobilesdk/160503_mobilesdk/logo/2x/firebase_28dp.png" alt="">
@@ -45,7 +45,7 @@
             <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
           </div>
         </a>
-        <a class="col-xs-4" href="https://dashboard.heroku.com/">
+        <a class="col-xs-4" href="https://dashboard.heroku.com/" target="_blank">
           <div class="card p-a-1 text-xs-center">
             <div class="col-xs-12 p-a-0 card-logo">
               <img src="https://d3k90kvix375hb.cloudfront.net/assets/logo-purple-08fb38cebb99e3aac5202df018eb337c5be74d5214768c90a8198c97420e4201.svg" alt="">
@@ -54,7 +54,7 @@
             <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
           </div>
         </a>
-        <a class="col-xs-4" href="https://analytics.google.com/">
+        <a class="col-xs-4" href="https://analytics.google.com/" target="_blank">
           <div class="card p-a-1 text-xs-center">
             <div class="col-xs-12 p-a-0 card-logo">
               <img src="https://ssl.gstatic.com/analytics/header/legacy/v1/ic_analytics.svg" alt="">
@@ -63,7 +63,7 @@
             <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
           </div>
         </a>
-        <a class="col-xs-4" href="http://caniuse.com">
+        <a class="col-xs-4" href="http://caniuse.com" target="_blank">
           <div class="card p-a-1 text-xs-center">
             <div class="col-xs-12 p-a-0 card-logo">
               <img src="http://caniuse.com/img/favicon-128.png" alt="">
@@ -72,7 +72,7 @@
             <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
           </div>
         </a>
-        <a class="col-xs-4" href="https://www.diffchecker.com/">
+        <a class="col-xs-4" href="https://www.diffchecker.com/" target="_blank">
           <div class="card p-a-1 text-xs-center">
             <div class="col-xs-12 p-a-0 card-logo">
               <img src="https://www.diffchecker.com/images/logo.png" alt="">
