add mockaroo to the list

--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
             <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
           </div>
         </a>
+        <a class="col-xs-4" href="https://www.mockaroo.com/" target="_blank">
+          <div class="card p-a-1 text-xs-center">
+            <div class="col-xs-12 p-a-0 card-logo">
+              <img src="https://www.mockaroo.com/assets/favicon-8d320ac46812befcc8e0c5388550bd14d2105f78bb354728e63dd50d9e345ede.png" alt="">
+            </div>
+            <h4 class="col-xs-12 p-a-0">Mockaroo</h4>
+            <p class="col-xs-12 p-a-0 text-xs-left">Realistic dev sample data generator.</p>
+          </div>
+        </a>
       </div>
     </div>
   </section>
