add Vue to project; move data out to JSON

--- a/index.html
+++ b/index.html
@@ -5,95 +5,56 @@
   <meta charset="UTF-8">
   <title>Georgi Yanev's Command Center</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <style>
-    a {
-      color: #0275d8;
-    }
-
-    a:hover {
-      color: #5cb85c;
-      text-decoration: none;
-    }
-
-    .card img {
-      height: 35px;
-      /*max-height: 35px;*/
-    }
-
-    .card .card-logo {
-      border-bottom: 1px solid #cecece;
-      padding-bottom: 1rem!important;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <script src="https://unpkg.com/vue@next/dist/vue.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </head>
 
 
 <body>
-  <section class="p-y-3">
+  <section id="app" class="p-y-3">
     <div class="container">
       <div class="row">
         <h2 class="col-xs-12 text-primary text-xs-center">Command Center Actions:</h2>
       </div>
+
       <!-- CARDS -->
       <div class="row">
-        <a class="col-xs-4" href="https://console.firebase.google.com/" target="_blank">
+
+        <!-- REPEATABLE VUE TEMPLATE -->
+        <a class="col-xs-4 m-t-1" :href="item.link" target="_blank" v-for="item in dataList">
           <div class="card p-a-1 text-xs-center">
             <div class="col-xs-12 p-a-0 card-logo">
-              <img src="https://www.gstatic.com/mobilesdk/160503_mobilesdk/logo/2x/firebase_28dp.png" alt="">
+              <img :src="item.image" alt="">
             </div>
-            <h4 class="col-xs-12 p-a-0">Firebase Console</h4>
-            <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
+            <h4 class="col-xs-12 p-a-0">{{ item.heading }}</h4>
+            <p class="col-xs-12 p-a-0 text-xs-left">{{ item.paragraph }}</p>
           </div>
         </a>
-        <a class="col-xs-4" href="https://dashboard.heroku.com/" target="_blank">
-          <div class="card p-a-1 text-xs-center">
-            <div class="col-xs-12 p-a-0 card-logo">
-              <img src="https://d3k90kvix375hb.cloudfront.net/assets/logo-purple-08fb38cebb99e3aac5202df018eb337c5be74d5214768c90a8198c97420e4201.svg" alt="">
-            </div>
-            <h4 class="col-xs-12 p-a-0">Heroku Dashboard</h4>
-            <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
-          </div>
-        </a>
-        <a class="col-xs-4" href="https://analytics.google.com/" target="_blank">
-          <div class="card p-a-1 text-xs-center">
-            <div class="col-xs-12 p-a-0 card-logo">
-              <img src="https://ssl.gstatic.com/analytics/header/legacy/v1/ic_analytics.svg" alt="">
-            </div>
-            <h4 class="col-xs-12 p-a-0">Google Analytics</h4>
-            <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
-          </div>
-        </a>
-        <a class="col-xs-4" href="http://caniuse.com" target="_blank">
-          <div class="card p-a-1 text-xs-center">
-            <div class="col-xs-12 p-a-0 card-logo">
-              <img src="http://caniuse.com/img/favicon-128.png" alt="">
-            </div>
-            <h4 class="col-xs-12 p-a-0">Can I use?</h4>
-            <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
-          </div>
-        </a>
-        <a class="col-xs-4" href="https://www.diffchecker.com/" target="_blank">
-          <div class="card p-a-1 text-xs-center">
-            <div class="col-xs-12 p-a-0 card-logo">
-              <img src="https://www.diffchecker.com/images/logo.png" alt="">
-            </div>
-            <h4 class="col-xs-12 p-a-0">Diff Checker</h4>
-            <p class="col-xs-12 p-a-0 text-xs-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed commodi, sit placeat odit eaque, culpa atque inventore nostrum sint fuga ad maxime quod esse at delectus ipsum aliquid? Illo, exercitationem.</p>
-          </div>
-        </a>
-        <a class="col-xs-4" href="https://www.mockaroo.com/" target="_blank">
-          <div class="card p-a-1 text-xs-center">
-            <div class="col-xs-12 p-a-0 card-logo">
-              <img src="https://www.mockaroo.com/assets/favicon-8d320ac46812befcc8e0c5388550bd14d2105f78bb354728e63dd50d9e345ede.png" alt="">
-            </div>
-            <h4 class="col-xs-12 p-a-0">Mockaroo</h4>
-            <p class="col-xs-12 p-a-0 text-xs-left">Realistic dev sample data generator.</p>
-          </div>
-        </a>
+
       </div>
     </div>
   </section>
 
+  <script>
+    ;
+    (function() {
+      // Grab data from the JSON file
+      // this could be hosted elsewhere in the future
+      $.ajax({
+        url: 'linkData.json',
+        complete: function(data) {
+          // Populate the data in the Vue template
+          new Vue({
+            el: '#app',
+            data: {
+              dataList: data.responseJSON
+            }
+          })
+        }
+      })
+    })()
+  </script>
 </body>
 
 </html>
